--- a/ProyectoFinalT/Views/LeyendaPage.xaml
+++ b/ProyectoFinalT/Views/LeyendaPage.xaml
@@ -1,13 +1,144 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+            xmlns:local="clr-namespace:ProyectoFinalT.Models"
              x:Class="ProyectoFinalT.Views.LeyendaPage"
+            
              Shell.FlyoutBehavior="Flyout"
              Title="Leyenda de traducción">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+    <Grid  RowDefinitions="1*,8*,1*">
+        <Frame BackgroundColor="#cfd0d8" Grid.Row="0" HorizontalOptions="EndAndExpand"
+               Padding="0" 
+               Margin="0,-80,-80,0"
+               HeightRequest="250"
+               WidthRequest="250" CornerRadius="125">
+
+        </Frame>
+        <Frame Grid.Row="0" HorizontalOptions="EndAndExpand"
+               Padding="0" 
+               Margin="0,-120,-120,0"
+               HeightRequest="250"
+               WidthRequest="250" CornerRadius="125">
+            <Frame.Background>
+                <!-- StartPoint defaults to (0,0)      
+             Endpoint defaults to (1,1) -->
+                <LinearGradientBrush>
+                    <GradientStop Color="#25C4D1"
+                              Offset="0.1" />
+                    <GradientStop Color="Aquamarine"
+                              Offset="1.0" />
+                </LinearGradientBrush>
+            </Frame.Background>
+
+        </Frame>
+        <Frame ZIndex="1" CornerRadius="8" BackgroundColor="Transparent"
+               Grid.Row="1" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand" HeightRequest="644" WidthRequest="385"
+               Margin="0,-10,0,0" BorderColor="Transparent">
+            <ScrollView BackgroundColor="Transparent" HeightRequest="600" WidthRequest="385"  >
+                <Frame BorderColor="Transparent" BackgroundColor="Transparent" Margin="-15,-8,-15,-15" >
+                    <!--<StackLayout BackgroundColor="Transparent" Margin="-15,-8,-15,-15">-->
+
+                    <StackLayout>
+                        <VerticalStackLayout Grid.Row="10" BackgroundColor="#BDDBF3" Margin="0,0,0,0" Spacing="4">
+                            <HorizontalStackLayout Margin="5,5,0,0">
+                                <Frame  BorderColor="Transparent" BackgroundColor="White"
+                                            CornerRadius="10" Padding="5"  HeightRequest="800" WidthRequest="360">
+                                    
+                                    <Grid>
+                                        <local:ImagenClaveSol>
+                                            <Image Source="pentagramasdeclavesol.png" />
+                                            
+                                        </local:ImagenClaveSol>
+                                        
+                                        
+                                    </Grid>
+                                </Frame>
+                            </HorizontalStackLayout>
+                            <HorizontalStackLayout Margin="5,5,0,0">
+                                <Frame Margin="0,0,3,0" BorderColor="Transparent" BackgroundColor="White"
+                                            CornerRadius="10" Padding="5"  HeightRequest="800" WidthRequest="360">
+                                    <Grid>
+                                        <local:ImagenClaveSol>
+                                            <!--<Image Source="pentagramasdeclavesol.png" />-->
+                                            <Image Source="pentagramasdeclavefa.png" />
+
+                                        </local:ImagenClaveSol>
+
+                                    </Grid>
+                                </Frame>
+
+                            </HorizontalStackLayout>
+                            <HorizontalStackLayout Margin="5,0,0,0">
+                                <Frame Margin="0,0,10,0" BorderColor="Transparent" BackgroundColor="White"
+                                            CornerRadius="10" Padding="5"  HeightRequest="800" WidthRequest="360">
+                                    <Grid>
+                                        <local:ImagenClaveSol>
+                                            <Image Source="pentagramasdeclavesdotres.png" />
+
+
+
+                                        </local:ImagenClaveSol>
+
+
+                                    </Grid>
+
+                                </Frame>
+                            </HorizontalStackLayout>
+                            
+                            <HorizontalStackLayout Margin="5,0,0,10">
+
+                                <Frame Margin="0,0,10,8" BorderColor="Transparent" BackgroundColor="White"
+                                            CornerRadius="10" Padding="5"  HeightRequest="800" WidthRequest="360">
+                                    <Grid>
+                                        <local:ImagenClaveSol>
+                                            <Image Source="pentagramasdeclavesdocuatro.png" />
+
+
+
+                                        </local:ImagenClaveSol>
+
+
+                                    </Grid>
+
+                                </Frame>
+
+                            </HorizontalStackLayout>
+                           
+
+                        </VerticalStackLayout>
+                    </StackLayout>
+
+
+                    <!--</StackLayout>-->
+                </Frame>
+
+            </ScrollView>
+        </Frame>
+        <Frame BackgroundColor="#cfd0d8" Grid.Row="2" 
+               VerticalOptions="EndAndExpand"
+               HorizontalOptions="StartAndExpand"
+               Padding="0" 
+               Margin="-30,50,-85,-185"
+               HeightRequest="250"
+               WidthRequest="250" CornerRadius="125">
+
+        </Frame>
+        <Frame VerticalOptions="EndAndExpand"
+               Grid.Row="2" 
+               HorizontalOptions="StartAndExpand"
+               Padding="0" 
+               Margin="-28,0,0,-200"
+               HeightRequest="250"
+               WidthRequest="250" CornerRadius="125">
+            <Frame.Background>
+                <!-- StartPoint defaults to (0,0) -->
+                <LinearGradientBrush EndPoint="1,0">
+                    <GradientStop Color="#25C4D1"
+                          Offset="0.1" />
+                    <GradientStop Color="Aquamarine"
+                          Offset="1.0" />
+                </LinearGradientBrush>
+            </Frame.Background>
+        </Frame>
+    </Grid>
 </ContentPage>
